gccida/c0/expand_call
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2537:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2538:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2539:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2542:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2545:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2546:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree_value; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2549:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2555:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2557:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2570:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2581:4: error: expected ';' after expression
rtx y; // [rsp+40h] [rbp-300h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2581:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+40h] [rbp-300h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2582:4: error: expected ';' after expression
rtx v50; // [rsp+48h] [rbp-2F8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2582:5: error: use of undeclared identifier 'v50'
rtx v50; // [rsp+48h] [rbp-2F8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2583:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // [rsp+54h] [rbp-2ECh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2584:4: error: expected ';' after expression
rtx src; // [rsp+58h] [rbp-2E8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2584:5: error: use of undeclared identifier 'src'
rtx src; // [rsp+58h] [rbp-2E8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/calls.c:2585:4: error: expected ';' after expression
rtx orig_dst; // [rsp+60h] [rbp-2E0h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_call/src/obj/calls.o] Error 1
